XW-1896 | global footer has fixed width on small breakpoint (as page content does)

--- a/skins/oasis/css/core/breakpoints-layout.scss
+++ b/skins/oasis/css/core/breakpoints-layout.scss
@@ -5,9 +5,18 @@
 @if $widthType == 0 {
 	// consider using https://github.com/stowball/mqGenie for release
 	@media #{$breakpoint-small-only} {
+		$content-width: $page-width-small - 2 * $content-border-width;
+
 		.WikiaPage {
 			padding: 0 $padding-width-small;
-			width: $page-width-small - 2 * $content-border-width;
+			width: $content-width;
+		}
+
+		.wds-global-footer {
+			margin-left: auto;
+			margin-right: auto;
+			width: $content-width + 2 * $padding-width-small;
+
 		}
 	}
 
